[project]
name = "repafiller"
version = "0.1.0"
description = ""
authors = [
    {name = "matusgozorek", email = "matusgozorek@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.34.2,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "repafiller", from = "src"}]

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry.scripts]
repafiller = "repafiller.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"